Thu May 26 20:41:04 2005  Jaiganesh B  <jai@dre.vanderbilt.edu>

	* DAnCE/ciao/Home_Servant_Impl_T.cpp:
	* DAnCE/ciao/Servant_Impl_Base.cpp:
	* DAnCE/ciao/Servant_Impl_T.cpp:
	* DAnCE/ciao/Servant_Impl_T.h:

	Added support for the component servants to inherit
	from RefCountServantBase, to allow freeing up of
	servants in a more standard and effective manner.

	Added support functions in Servant_Impl_T class to 
	clean up the component executor memory.

	Added support functions in Home_Servant_Impl_T and 
	Servant_Impl_Base classes to uninstall components
	by executing operations like ccm_remove () in the
	right order.

	Finally fixed couple of memory leaks with respect 
	to cleaning up component servants and component
	executors.

	Thanks to Steve Baker <Steve_D_Baker@Raytheon.com>
	for reporting the problem.

Thu May 26 21:09:22 2005  Gan Deng <gan.deng@vanderbilt.edu>
	
	* tools/Simple_Component_Server/Simple_Component_Server.mpc

	  Put an empty IDL_Files segment in the 
	  "Simple_Component_Server" project so the IDL
	  file is not picked up automatically. Thanks to Will Chai
          <willchai@126.com> for reporting this.

	* NEWS
	* DAnCE/NEWS

	  Merged these two files and deleted the DAnCE/NEWS file,
	  since these two files serve similar purposes.

Thu May 26 14:46:53 CDT 2005  Will Otte <wotte@dre.vanderbilt.edu>
	
	* DAnCE/NodeManager/NodeDaemon_Impl.cpp

	Fixed a memory leak which would cause NodeManagers to leak 
	when destroyed. 
	
Thu May 26 07:53:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * DAnCE/examples/Quoter/Broker/Broker.cpp:
          Fixed doxygen file tag

Wed May 25 11:05:05 2005  Ming Xiong  <mxiong@dre.vanderbilt.edu>

        * DAnCE/examples/Quoter/Stock_Base/Stock_Base.mpc:
        * DAnCE/examples/Quoter/Stock_Base/Stock_Base.idl:
        * DAnCE/examples/Quoter/Stock_Base/Stock_Base_svnt_export.h:
        * DAnCE/examples/Quoter/Stock_Base/Stock_Base_stub_export.h: